<?xml version="1.0"?>
<package format="2">
  <name>deploy_module</name>
  <version>0.0.0</version>
  <description>The deploy_module package</description>

  <maintainer email="satoshi.ota928@gmail.com">Satoshi Ota</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
